tests/verify/fail/assert-false.rs
// error-pattern: error[P0003]

extern crate prusti_contracts;

fn main() {
    assert!(false);
}
